--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <ul class="nav__list">
         <li class="nav__item"><a href="home" class="nav__link">Home</a></li>
         <li class="nav__item"><a href="services" class="nav__link">My Services</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">About Me</a></li>
+        <li class="nav__item"><a href="about" class="nav__link">About Me</a></li>
         <li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
       </ul>
     </nav>
@@ -41,25 +41,83 @@
           <div class="service">
             <h3>Design & Development</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius, voluptas itaque accusantium in consectetur facere, exercitationem tenetur rem eaque, illum illo sit. Obcaecati ducimus explicabo minima quisquam autem consequuntur sapiente!</p>
-          </div>
-           <!-- / service -->
+          </div><!-- / service -->
 
           <div class="service">
             <h3>Lorem</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe molestias hic beatae nulla! Consequatur, qui. Nisi in tenetur vel explicabo mollitia praesentium assumenda nesciunt quis! Nihil aliquam fugit quod quia.</p>
-          </div>
-           <!-- / service -->
+          </div> <!-- / service -->
 
           <div class="service">
             <h3>Lorem</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum suscipit, obcaecati amet quis harum provident porro laborum! At aut voluptatem similique eligendi, animi neque reiciendis. Consequuntur facere cumque quae.</p>
-          </div>
-           <!-- / service -->
+          </div> <!-- / service -->
 
-        </div> 
-        <!-- / services -->
+        </div> <!-- / services -->
          <a href="#work" class="btn">My Work</a>
       </section>
+
+      <!-- About Me -->
+      <section class="about-me" id="about">
+        <h2 class="section__title section__title--about">Who I Am</h2>
+        <p class="section__subtitle section__subtitle--about"></p>
+
+        <div class="about-me__body">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dicta, debitis autem ipsa corrupti tempora alias consectetur nostrum delectus, hic sit blanditiis, suscipit pariatur mollitia. Maxime fuga minus illo ipsam.</p>
+          <p>Lorem</p>
+        </div>
+
+        <img src="img/" alt=""> <!-- image goes here-->
+      </section>
+
+      <section class="my-work" id="work">
+        <h2 class="section__title">My Work</h2>
+        <p class="section__subtitle"></p>
+
+        <div class="portfolio">
+          <!-- portfolio item 01 -->
+          <a href="#" class="portfolio__item">
+            <img src="" alt="" class="portfolio__img"> <!-- image goes here-->
+          </a>
+
+          <!-- portfolio item 02 -->
+          <a href="#" class="portfolio__item">
+            <img src="" alt="" class="portfolio__img"> <!-- image goes here-->
+          </a>
+
+          <!-- portfolio item 03 -->
+          <a href="#" class="portfolio__item">
+            <img src="" alt="" class="portfolio__img"> <!-- image goes here-->
+          </a>
+
+          <!-- portfolio item 04 -->
+          <a href="#" class="portfolio__item">
+            <img src="" alt="" class="portfolio__img"> <!-- image goes here-->
+          </a>
+
+          <!-- portfolio item 05 -->
+          <a href="#" class="portfolio__item">
+            <img src="" alt="" class="portfolio__img"> <!-- image goes here-->
+          </a>
+
+           <!-- portfolio item 06 -->
+          <a href="#" class="portfolio__item">
+            <img src="" alt="" class="portfolio__img"> <!-- image goes here-->
+          </a>
+        </div>
+      </section>
+
+      <!-- Footer -->
+      <footer>
+        <a href="" class="footer--link">c.ivy.atwood@gmail.com</a>
+        <ul class="social-list">
+          <li class="social-list__item"><a href="google.com" class="social-list__link">google</a></li>
+          <li class="social-list__item"><a href="google.com" class="social-list__link">google</a></li>
+          <li class="social-list__item"><a href="google.com" class="social-list__link">google</a></li>
+          <li class="social-list__item"><a href="google.com" class="social-list__link">google</a></li>
+          <li class="social-list__item"><a href="google.com" class="social-list__link">google</a></li>
+        </ul>
+      </footer>
      
 </body>
 </html>
