--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
   <title>ikaros portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+
+  <link rel="stylesheet" href="css/style.css">
+
 </head>
+
 <body>
   <header>
     <div class="logo">
-      <img src="img/" alt=""> <!-- image needed here -->
+      <img src="" alt=""> <!-- image needed here -->
     </div>
 
     <button class="nav-toggle" aria-label="toggle navigation">
@@ -21,7 +25,7 @@
         <li class="nav__item"><a href="home" class="nav__link">Home</a></li>
         <li class="nav__item"><a href="services" class="nav__link">My Services</a></li>
         <li class="nav__item"><a href="about" class="nav__link">About Me</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
+        <li class="nav__item"><a href="work" class="nav__link">My Work</a></li>
       </ul>
     </nav>
   </header>
@@ -31,7 +35,7 @@
         Hi, I am <strong>Caydan Atwood</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-      <img src="img/" alt="a pciture of Caydan Atwood smiling">  <!-- image needed here -->
+      <img src="img/caydan1.jpg" alt=" a picture of betty smiling">  <!-- image needed here -->
     </section>
 
      <!-- My Services -->
@@ -54,7 +58,7 @@
           </div> <!-- / service -->
 
         </div> <!-- / services -->
-         <a href="#work" class="btn">My Work</a>
+         <a href="work" class="btn">My Work</a>
       </section>
 
       <!-- About Me -->
@@ -67,7 +71,7 @@
           <p>Lorem</p>
         </div>
 
-        <img src="img/" alt=""> <!-- image goes here-->
+        <img src="img/caydan2.JPG" alt="a picture of archie snoot"> <!-- image goes here-->
       </section>
 
       <section class="my-work" id="work">
@@ -76,32 +80,32 @@
 
         <div class="portfolio">
           <!-- portfolio item 01 -->
-          <a href="#" class="portfolio__item">
+          <a href="img/work1.png" class="portfolio__item">
             <img src="" alt="" class="portfolio__img"> <!-- image goes here-->
           </a>
 
           <!-- portfolio item 02 -->
-          <a href="#" class="portfolio__item">
+          <a href="img/work2.png" class="portfolio__item">
             <img src="" alt="" class="portfolio__img"> <!-- image goes here-->
           </a>
 
           <!-- portfolio item 03 -->
-          <a href="#" class="portfolio__item">
+          <a href="img/work3.png" class="portfolio__item">
             <img src="" alt="" class="portfolio__img"> <!-- image goes here-->
           </a>
 
           <!-- portfolio item 04 -->
-          <a href="#" class="portfolio__item">
+          <a href="img/work4.png" class="portfolio__item">
             <img src="" alt="" class="portfolio__img"> <!-- image goes here-->
           </a>
 
           <!-- portfolio item 05 -->
-          <a href="#" class="portfolio__item">
+          <a href="img/work5.png" class="portfolio__item">
             <img src="" alt="" class="portfolio__img"> <!-- image goes here-->
           </a>
 
            <!-- portfolio item 06 -->
-          <a href="#" class="portfolio__item">
+          <a href="img/work6.png" class="portfolio__item">
             <img src="" alt="" class="portfolio__img"> <!-- image goes here-->
           </a>
         </div>
