--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, inital-scale=1.0" />
-		<title>ikaros portfolio</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>ikaros portfolio site</title>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"
@@ -15,6 +15,12 @@
 			crossorigin="anonymous"
 		/>
 
+		<!-- Update these with your own fonts -->
+		<link
+			href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
+			rel="stylesheet"
+		/>
+
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 
@@ -22,7 +28,6 @@
 		<header>
 			<div class="logo">
 				<img src="img/miku.jpg" alt="a pciture of hatsune miku" />
-				<!-- image needed here -->
 			</div>
 
 			<button class="nav-toggle" aria-label="toggle navigation">
@@ -45,14 +50,18 @@
 				</ul>
 			</nav>
 		</header>
+
 		<!-- Introduction -->
 		<section class="intro" id="home">
 			<h1 class="section__title section__title--intro">
 				Hi, I am <strong>Caydan Atwood</strong>
 			</h1>
 			<p class="section__subtitle section__subtitle--intro">front-end dev</p>
-			<img src="img/caydan1.jpg" alt=" a picture of betty smiling" />
-			<!-- image needed here -->
+			<img
+				src="img/caydan1.jpg"
+				alt=" a picture of betty smiling"
+				class="intro__img"
+			/>
 		</section>
 
 		<!-- My Services -->
@@ -112,7 +121,6 @@
 			</div>
 
 			<img src="img/caydan2.JPG" alt="a picture of archie snoot" />
-			<!-- image goes here-->
 		</section>
 
 		<section class="my-work" id="work">
@@ -123,37 +131,31 @@
 				<!-- portfolio item 01 -->
 				<a href="#" class="portfolio__item">
 					<img src="img/work1.png" alt="" class="portfolio__img" />
-					<!-- image goes here-->
 				</a>
 
 				<!-- portfolio item 02 -->
 				<a href="#" class="portfolio__item">
 					<img src="img/work2.png" alt="" class="portfolio__img" />
-					<!-- image goes here-->
 				</a>
 
 				<!-- portfolio item 03 -->
 				<a href="#" class="portfolio__item">
 					<img src="img/work3.png" alt="" class="portfolio__img" />
-					<!-- image goes here-->
 				</a>
 
 				<!-- portfolio item 04 -->
 				<a href="#" class="portfolio__item">
 					<img src="img/work4.png" alt="" class="portfolio__img" />
-					<!-- image goes here-->
 				</a>
 
 				<!-- portfolio item 05 -->
 				<a href="#" class="portfolio__item">
 					<img src="img/work5.png" alt="" class="portfolio__img" />
-					<!-- image goes here-->
 				</a>
 
 				<!-- portfolio item 06 -->
 				<a href="#" class="portfolio__item">
 					<img src="img/work6.png" alt="" class="portfolio__img" />
-					<!-- image goes here-->
 				</a>
 			</div>
 		</section>
