--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
 		<!-- About Me -->
 		<section class="about-me" id="about">
 			<h2 class="section__title section__title--about">Who I Am</h2>
-			<p class="section__subtitle section__subtitle--about"></p>
+			<p class="section__subtitle section__subtitle--about">
+				Developer based out of Phoenix
+			</p>
 
 			<div class="about-me__body">
 				<p>
@@ -120,7 +122,11 @@
 				<p>Lorem</p>
 			</div>
 
-			<img src="img/caydan2.JPG" alt="a picture of archie snoot" />
+			<img
+				src="img/caydan2.JPG"
+				alt="a picture of archie snoot"
+				class="about-me__img"
+			/>
 		</section>
 
 		<section class="my-work" id="work">
