--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 			<nav class="nav">
 				<ul class="nav__list">
 					<li class="nav__item">
-						<a href="home" class="nav__link">Home</a>
+						<a href="#home" class="nav__link">Home</a>
 					</li>
 					<li class="nav__item">
-						<a href="services" class="nav__link">My Services</a>
+						<a href="#services" class="nav__link">My Services</a>
 					</li>
 					<li class="nav__item">
-						<a href="about" class="nav__link">About Me</a>
+						<a href="#about" class="nav__link">About Me</a>
 					</li>
 					<li class="nav__item">
-						<a href="work" class="nav__link">My Work</a>
+						<a href="#work" class="nav__link">My Work</a>
 					</li>
 				</ul>
 			</nav>
@@ -102,14 +102,14 @@
 				<!-- / service -->
 			</div>
 			<!-- / services -->
-			<a href="work" class="btn">My Work</a>
+			<a href="#work" class="btn">My Work</a>
 		</section>
 
 		<!-- About Me -->
 		<section class="about-me" id="about">
-			<h2 class="section__title section__title--about">Who I Am</h2>
+			<h2 class="section__title section__title--about">Who I am</h2>
 			<p class="section__subtitle section__subtitle--about">
-				Developer based out of Phoenix
+				developer based in phx
 			</p>
 
 			<div class="about-me__body">
@@ -119,7 +119,11 @@
 					nostrum delectus, hic sit blanditiis, suscipit pariatur mollitia.
 					Maxime fuga minus illo ipsam.
 				</p>
-				<p>Lorem</p>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis
+					commodi eum placeat minima iusto distinctio velit aliquam
+					officiis dolore illum.
+				</p>
 			</div>
 
 			<img
@@ -130,62 +134,68 @@
 		</section>
 
 		<section class="my-work" id="work">
-			<h2 class="section__title">My Work</h2>
-			<p class="section__subtitle"></p>
+			<h2 class="section__title section__title--work">My Work</h2>
+			<p class="section__subtitle section__subtitle--work">
+				my range of work
+			</p>
 
 			<div class="portfolio">
 				<!-- portfolio item 01 -->
-				<a href="#" class="portfolio__item">
+				<a href="portfolio-item.html" class="portfolio__item">
 					<img src="img/work1.png" alt="" class="portfolio__img" />
 				</a>
 
 				<!-- portfolio item 02 -->
-				<a href="#" class="portfolio__item">
+				<a href="portfolio-item.html" class="portfolio__item">
 					<img src="img/work2.png" alt="" class="portfolio__img" />
 				</a>
 
 				<!-- portfolio item 03 -->
-				<a href="#" class="portfolio__item">
+				<a href="portfolio-item.html" class="portfolio__item">
 					<img src="img/work3.png" alt="" class="portfolio__img" />
 				</a>
 
 				<!-- portfolio item 04 -->
-				<a href="#" class="portfolio__item">
+				<a href="portfolio-item.html" class="portfolio__item">
 					<img src="img/work4.png" alt="" class="portfolio__img" />
 				</a>
 
 				<!-- portfolio item 05 -->
-				<a href="#" class="portfolio__item">
+				<a href="portfolio-item.html" class="portfolio__item">
 					<img src="img/work5.png" alt="" class="portfolio__img" />
 				</a>
 
 				<!-- portfolio item 06 -->
-				<a href="#" class="portfolio__item">
+				<a href="portfolio-item.html" class="portfolio__item">
 					<img src="img/work6.png" alt="" class="portfolio__img" />
 				</a>
 			</div>
 		</section>
 
 		<!-- Footer -->
-		<footer>
-			<a href="" class="footer--link">c.ivy.atwood@gmail.com</a>
+		<footer class="footer">
+			<a href="" class="footer__link">c.ivy.atwood@gmail.com</a>
 			<ul class="social-list">
 				<li class="social-list__item">
-					<a href="google.com" class="social-list__link">google</a>
+					<a href="https://github.com/ivy-ikaros" class="social-list__link"
+						><i class="fa-brands fa-github"></i
+					></a>
 				</li>
 				<li class="social-list__item">
-					<a href="google.com" class="social-list__link">google</a>
-				</li>
-				<li class="social-list__item">
-					<a href="google.com" class="social-list__link">google</a>
-				</li>
-				<li class="social-list__item">
-					<a href="google.com" class="social-list__link">google</a>
-				</li>
-				<li class="social-list__item">
-					<a href="google.com" class="social-list__link">google</a>
+					<a
+						href="https://www.linkedin.com/in/caydan-atwood-73581736b/"
+						class="social-list__link"
+						><i class="fa-brands fa-linkedin"></i
+					></a>
 				</li>
 			</ul>
 		</footer>
+
+		<script src="js/index.js"></script>
+
+		<script
+			src="https://kit.fontawesome.com/284280189e.js"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
