aria label cleanup

--- a/index.html
+++ b/index.html
@@ -141,32 +141,56 @@
 
 			<div class="portfolio">
 				<!-- portfolio item 01 -->
-				<a href="portfolio-item.html" class="portfolio__item">
+				<a
+					href="portfolio-item.html"
+					aria-label="Go to portfolio item 1 webpage"
+					class="portfolio__item"
+				>
 					<img src="img/work1.png" alt="" class="portfolio__img" />
 				</a>
 
 				<!-- portfolio item 02 -->
-				<a href="portfolio-item.html" class="portfolio__item">
+				<a
+					href="portfolio-item.html"
+					aria-label="Go to portfolio item 2 webpage"
+					class="portfolio__item"
+				>
 					<img src="img/work2.png" alt="" class="portfolio__img" />
 				</a>
 
 				<!-- portfolio item 03 -->
-				<a href="portfolio-item.html" class="portfolio__item">
+				<a
+					href="portfolio-item.html"
+					aria-label="Go to portfolio item 3 webpage"
+					class="portfolio__item"
+				>
 					<img src="img/work3.png" alt="" class="portfolio__img" />
 				</a>
 
 				<!-- portfolio item 04 -->
-				<a href="portfolio-item.html" class="portfolio__item">
+				<a
+					href="portfolio-item.html"
+					aria-label="Go to portfolio item 4 webpage"
+					class="portfolio__item"
+				>
 					<img src="img/work4.png" alt="" class="portfolio__img" />
 				</a>
 
 				<!-- portfolio item 05 -->
-				<a href="portfolio-item.html" class="portfolio__item">
+				<a
+					href="portfolio-item.html"
+					aria-label="Go to portfolio item 5 webpage"
+					class="portfolio__item"
+				>
 					<img src="img/work5.png" alt="" class="portfolio__img" />
 				</a>
 
 				<!-- portfolio item 06 -->
-				<a href="portfolio-item.html" class="portfolio__item">
+				<a
+					href="portfolio-item.html"
+					aria-label="Go to portfolio item 6 webpage"
+					class="portfolio__item"
+				>
 					<img src="img/work6.png" alt="" class="portfolio__img" />
 				</a>
 			</div>
@@ -177,13 +201,17 @@
 			<a href="" class="footer__link">c.ivy.atwood@gmail.com</a>
 			<ul class="social-list">
 				<li class="social-list__item">
-					<a href="https://github.com/ivy-ikaros" class="social-list__link"
+					<a
+						href="https://github.com/ivy-ikaros"
+						aria-label="Go to Caydan's github profile"
+						class="social-list__link"
 						><i class="fa-brands fa-github"></i
 					></a>
 				</li>
 				<li class="social-list__item">
 					<a
 						href="https://www.linkedin.com/in/caydan-atwood-73581736b/"
+						aria-label="Go to Caydan's linkedin profile"
 						class="social-list__link"
 						><i class="fa-brands fa-linkedin"></i
 					></a>
