--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -100,13 +100,17 @@
 			<a href="" class="footer__link">c.ivy.atwood@gmail.com</a>
 			<ul class="social-list">
 				<li class="social-list__item">
-					<a href="https://github.com/" class="social-list__link"
+					<a
+						href="https://github.com/ivy-ikaros"
+						aria-label="Go to Caydan's github profile"
+						class="social-list__link"
 						><i class="fa-brands fa-github"></i
 					></a>
 				</li>
 				<li class="social-list__item">
 					<a
 						href="https://www.linkedin.com/in/caydan-atwood-73581736b/"
+						aria-label="Go to Caydan's linkedin profile"
 						class="social-list__link"
 						><i class="fa-brands fa-linkedin"></i
 					></a>
