--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>ikaros portfolio</title>
+		<link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
