--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>ikaros portfolio</title>
-		<link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+		<link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
-			href="/apple-touch-icon.png"
+			href="img/apple-touch-icon.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
-			href="/favicon-32x32.png"
+			href="img/favicon-32x32.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="16x16"
-			href="/favicon-16x16.png"
+			href="img/favicon-16x16.png"
 		/>
 		<link rel="manifest" href="/site.webmanifest" />
 		<link
