prettier/styles update

--- a/index.html
+++ b/index.html
@@ -1,248 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>ikaros portfolio</title>
-		<link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
-		<link
-			rel="apple-touch-icon"
-			sizes="180x180"
-			href="img/apple-touch-icon.png"
-		/>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="32x32"
-			href="img/favicon-32x32.png"
-		/>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="16x16"
-			href="img/favicon-16x16.png"
-		/>
-		<link rel="manifest" href="/site.webmanifest" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"
-		/>
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
-			integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc="
-			crossorigin="anonymous"
-		/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ikaros portfolio</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+      integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc="
+      crossorigin="anonymous" />
 
-		<!-- Update these with your own fonts -->
-		<link
-			href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
-			rel="stylesheet"
-		/>
+    <!-- Update these with your own fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
+      rel="stylesheet" />
 
-		<link rel="stylesheet" href="css/style.css" />
-	</head>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-	<body>
-		<header>
-			<div class="logo">
-				<img src="img/miku.jpg" alt="a pciture of hatsune miku" />
-			</div>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="img/miku.jpg" alt="a pciture of hatsune miku" />
+      </div>
 
-			<button class="nav-toggle" aria-label="toggle navigation">
-				<span class="hamburger"></span>
-			</button>
-			<nav class="nav">
-				<ul class="nav__list">
-					<li class="nav__item">
-						<a href="#home" class="nav__link">Home</a>
-					</li>
-					<li class="nav__item">
-						<a href="#services" class="nav__link">My Services</a>
-					</li>
-					<li class="nav__item">
-						<a href="#about" class="nav__link">About Me</a>
-					</li>
-					<li class="nav__item">
-						<a href="#work" class="nav__link">My Work</a>
-					</li>
-				</ul>
-			</nav>
-		</header>
+      <button class="nav-toggle" aria-label="toggle navigation">
+        <span class="hamburger"></span>
+      </button>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="index.html" class="nav__link">Home</a>
+          </li>
+          <li class="nav__item">
+            <a href="#services" class="nav__link">My Services</a>
+          </li>
+          <li class="nav__item">
+            <a href="#about" class="nav__link">About Me</a>
+          </li>
+          <li class="nav__item">
+            <a href="#work" class="nav__link">My Work</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-		<!-- Introduction -->
-		<section class="intro" id="home">
-			<h1 class="section__title section__title--intro">
-				Hi, I am <strong>Caydan Atwood</strong>
-			</h1>
-			<p class="section__subtitle section__subtitle--intro">front-end dev</p>
-			<img
-				src="img/caydan1.jpg"
-				alt=" a picture of betty smiling"
-				class="intro__img"
-			/>
-		</section>
+    <!-- Introduction -->
+    <section class="intro" id="home">
+      <h1 class="section__title section__title--intro">
+        Hi, I am <strong>Caydan Atwood</strong>
+      </h1>
+      <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+      <img
+        src="img/caydan1.jpg"
+        alt=" a picture of betty smiling"
+        class="intro__img" />
+    </section>
 
-		<!-- My Services -->
-		<section class="my-services" id="services">
-			<h2 class="section__title section__title--services">What I do</h2>
-			<div class="services">
-				<div class="service">
-					<h3>Design & Development</h3>
-					<p>
-						Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-						Eius, voluptas itaque accusantium in consectetur facere,
-						exercitationem tenetur rem eaque, illum illo sit. Obcaecati
-						ducimus explicabo minima quisquam autem consequuntur sapiente!
-					</p>
-				</div>
-				<!-- / service -->
+    <!-- My Services -->
+    <section class="my-services" id="services">
+      <h2 class="section__title section__title--services">What I do</h2>
+      <div class="services">
+        <div class="service">
+          <h3>Design & Development</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius, voluptas
+            itaque accusantium in consectetur facere, exercitationem tenetur rem
+            eaque, illum illo sit. Obcaecati ducimus explicabo minima quisquam autem
+            consequuntur sapiente!
+          </p>
+        </div>
+        <!-- / service -->
 
-				<div class="service">
-					<h3>Lorem</h3>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-						molestias hic beatae nulla! Consequatur, qui. Nisi in tenetur
-						vel explicabo mollitia praesentium assumenda nesciunt quis!
-						Nihil aliquam fugit quod quia.
-					</p>
-				</div>
-				<!-- / service -->
+        <div class="service">
+          <h3>Lorem</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe molestias
+            hic beatae nulla! Consequatur, qui. Nisi in tenetur vel explicabo
+            mollitia praesentium assumenda nesciunt quis! Nihil aliquam fugit quod
+            quia.
+          </p>
+        </div>
+        <!-- / service -->
 
-				<div class="service">
-					<h3>Lorem</h3>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
-						dolorum suscipit, obcaecati amet quis harum provident porro
-						laborum! At aut voluptatem similique eligendi, animi neque
-						reiciendis. Consequuntur facere cumque quae.
-					</p>
-				</div>
-				<!-- / service -->
-			</div>
-			<!-- / services -->
-			<a href="#work" class="btn">My Work</a>
-		</section>
+        <div class="service">
+          <h3>Lorem</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum
+            suscipit, obcaecati amet quis harum provident porro laborum! At aut
+            voluptatem similique eligendi, animi neque reiciendis. Consequuntur
+            facere cumque quae.
+          </p>
+        </div>
+        <!-- / service -->
+      </div>
+      <!-- / services -->
+      <a href="#work" class="btn">My Work</a>
+    </section>
 
-		<!-- About Me -->
-		<section class="about-me" id="about">
-			<h2 class="section__title section__title--about">Who I am</h2>
-			<p class="section__subtitle section__subtitle--about">
-				developer based in phx
-			</p>
+    <!-- About Me -->
+    <section class="about-me" id="about">
+      <h2 class="section__title section__title--about">Who I am</h2>
+      <p class="section__subtitle section__subtitle--about">
+        developer based in phx
+      </p>
 
-			<div class="about-me__body">
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero
-					dicta, debitis autem ipsa corrupti tempora alias consectetur
-					nostrum delectus, hic sit blanditiis, suscipit pariatur mollitia.
-					Maxime fuga minus illo ipsam.
-				</p>
-				<p>
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis
-					commodi eum placeat minima iusto distinctio velit aliquam
-					officiis dolore illum.
-				</p>
-			</div>
+      <div class="about-me__body">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dicta,
+          debitis autem ipsa corrupti tempora alias consectetur nostrum delectus, hic
+          sit blanditiis, suscipit pariatur mollitia. Maxime fuga minus illo ipsam.
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis commodi eum
+          placeat minima iusto distinctio velit aliquam officiis dolore illum.
+        </p>
+      </div>
 
-			<img
-				src="img/caydan2.JPG"
-				alt="a picture of archie snoot"
-				class="about-me__img"
-			/>
-		</section>
+      <img
+        src="img/caydan2.JPG"
+        alt="a picture of archie snoot"
+        class="about-me__img" />
+    </section>
 
-		<section class="my-work" id="work">
-			<h2 class="section__title section__title--work">My Work</h2>
-			<p class="section__subtitle section__subtitle--work">
-				my range of work
-			</p>
+    <section class="my-work" id="work">
+      <h2 class="section__title section__title--work">My Work</h2>
+      <p class="section__subtitle section__subtitle--work">my range of work</p>
 
-			<div class="portfolio">
-				<!-- portfolio item 01 -->
-				<a
-					href="portfolio-item.html"
-					aria-label="Go to portfolio item 1 webpage"
-					class="portfolio__item"
-				>
-					<img src="img/work1.png" alt="" class="portfolio__img" />
-				</a>
+      <div class="portfolio">
+        <!-- portfolio item 01 -->
+        <a
+          href="portfolio-item.html"
+          aria-label="Go to portfolio item 1 webpage"
+          class="portfolio__item">
+          <img src="img/work1.png" alt="" class="portfolio__img" />
+        </a>
 
-				<!-- portfolio item 02 -->
-				<a
-					href="portfolio-item.html"
-					aria-label="Go to portfolio item 2 webpage"
-					class="portfolio__item"
-				>
-					<img src="img/work2.png" alt="" class="portfolio__img" />
-				</a>
+        <!-- portfolio item 02 -->
+        <a
+          href="portfolio-item.html"
+          aria-label="Go to portfolio item 2 webpage"
+          class="portfolio__item">
+          <img src="img/work2.png" alt="" class="portfolio__img" />
+        </a>
 
-				<!-- portfolio item 03 -->
-				<a
-					href="portfolio-item.html"
-					aria-label="Go to portfolio item 3 webpage"
-					class="portfolio__item"
-				>
-					<img src="img/work3.png" alt="" class="portfolio__img" />
-				</a>
+        <!-- portfolio item 03 -->
+        <a
+          href="portfolio-item.html"
+          aria-label="Go to portfolio item 3 webpage"
+          class="portfolio__item">
+          <img src="img/work3.png" alt="" class="portfolio__img" />
+        </a>
 
-				<!-- portfolio item 04 -->
-				<a
-					href="portfolio-item.html"
-					aria-label="Go to portfolio item 4 webpage"
-					class="portfolio__item"
-				>
-					<img src="img/work4.png" alt="" class="portfolio__img" />
-				</a>
+        <!-- portfolio item 04 -->
+        <a
+          href="portfolio-item.html"
+          aria-label="Go to portfolio item 4 webpage"
+          class="portfolio__item">
+          <img src="img/work4.png" alt="" class="portfolio__img" />
+        </a>
 
-				<!-- portfolio item 05 -->
-				<a
-					href="portfolio-item.html"
-					aria-label="Go to portfolio item 5 webpage"
-					class="portfolio__item"
-				>
-					<img src="img/work5.png" alt="" class="portfolio__img" />
-				</a>
+        <!-- portfolio item 05 -->
+        <a
+          href="portfolio-item.html"
+          aria-label="Go to portfolio item 5 webpage"
+          class="portfolio__item">
+          <img src="img/work5.png" alt="" class="portfolio__img" />
+        </a>
 
-				<!-- portfolio item 06 -->
-				<a
-					href="portfolio-item.html"
-					aria-label="Go to portfolio item 6 webpage"
-					class="portfolio__item"
-				>
-					<img src="img/work6.png" alt="" class="portfolio__img" />
-				</a>
-			</div>
-		</section>
+        <!-- portfolio item 06 -->
+        <a
+          href="portfolio-item.html"
+          aria-label="Go to portfolio item 6 webpage"
+          class="portfolio__item">
+          <img src="img/work6.png" alt="" class="portfolio__img" />
+        </a>
+      </div>
+    </section>
 
-		<!-- Footer -->
-		<footer class="footer">
-			<a href="" class="footer__link">c.ivy.atwood@gmail.com</a>
-			<ul class="social-list">
-				<li class="social-list__item">
-					<a
-						href="https://github.com/ivy-ikaros"
-						aria-label="Go to Caydan's github profile"
-						class="social-list__link"
-						><i class="fa-brands fa-github"></i
-					></a>
-				</li>
-				<li class="social-list__item">
-					<a
-						href="https://www.linkedin.com/in/caydan-atwood-73581736b/"
-						aria-label="Go to Caydan's linkedin profile"
-						class="social-list__link"
-						><i class="fa-brands fa-linkedin"></i
-					></a>
-				</li>
-			</ul>
-		</footer>
+    <!-- Footer -->
+    <footer class="footer">
+      <a href="" class="footer__link">c.ivy.atwood@gmail.com</a>
+      <ul class="social-list">
+        <li class="social-list__item">
+          <a
+            href="https://github.com/ivy-ikaros"
+            aria-label="Go to Caydan's github profile"
+            class="social-list__link"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </li>
+        <li class="social-list__item">
+          <a
+            href="https://www.linkedin.com/in/caydan-atwood-73581736b/"
+            aria-label="Go to Caydan's linkedin profile"
+            class="social-list__link"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </li>
+      </ul>
+    </footer>
 
-		<script src="js/index.js"></script>
+    <script src="js/index.js"></script>
 
-		<script
-			src="https://kit.fontawesome.com/284280189e.js"
-			crossorigin="anonymous"
-		></script>
-	</body>
+    <script
+      src="https://kit.fontawesome.com/284280189e.js"
+      crossorigin="anonymous"></script>
+  </body>
 </html>
