--- a/index.html
+++ b/index.html
@@ -22,19 +22,28 @@
     <link
       href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
       rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Astloch:wght@400;700&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet" />
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <header>
-      <div class="logo">
-        <img src="img/miku.jpg" alt="a pciture of hatsune miku" />
-      </div>
+      <div class="topbar">
+        <div class="logo">
+          <!-- <img src="img/miku.jpg" alt="a pciture of hatsune miku" /> -->
+          <a href="index.html" class="logo__link">ikaros</a>
+        </div>
 
-      <button class="nav-toggle" aria-label="toggle navigation">
-        <span class="hamburger"></span>
-      </button>
+        <button class="nav-toggle" aria-label="toggle navigation">
+          <span class="hamburger"></span>
+        </button>
+      </div>
+      <nav class="nav__layer"></nav>
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item">
@@ -72,10 +81,9 @@
         <div class="service">
           <h3>Design & Development</h3>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius, voluptas
-            itaque accusantium in consectetur facere, exercitationem tenetur rem
-            eaque, illum illo sit. Obcaecati ducimus explicabo minima quisquam autem
-            consequuntur sapiente!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores ut,
+            commodi cumque, fugit cum mollitia, ipsum explicabo sed qui cupiditate
+            tenetur quam quidem corrupti esse?
           </p>
         </div>
         <!-- / service -->
@@ -91,7 +99,7 @@
         </div>
         <!-- / service -->
 
-        <div class="service">
+        <!-- <div class="service">
           <h3>Lorem</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum
@@ -99,7 +107,7 @@
             voluptatem similique eligendi, animi neque reiciendis. Consequuntur
             facere cumque quae.
           </p>
-        </div>
+        </div> -->
         <!-- / service -->
       </div>
       <!-- / services -->
@@ -115,13 +123,21 @@
 
       <div class="about-me__body">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dicta,
-          debitis autem ipsa corrupti tempora alias consectetur nostrum delectus, hic
-          sit blanditiis, suscipit pariatur mollitia. Maxime fuga minus illo ipsam.
+          Hi! I'm Caydan and I'm a forever tinker, fiddler, learner, and developer. I
+          love to learn and refine my abilities in everything I do, and I strive to
+          gain heightened proficencies.
         </p>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis commodi eum
-          placeat minima iusto distinctio velit aliquam officiis dolore illum.
+          I firmly believe in the philosphy: "A jack of all trades is a master of
+          none, but oftentimes better than a master of one." To that end, I believe I
+          may never truly master a given skillset but will always be ready to further
+          refine it.
+        </p>
+        <p>
+          In my time away from work, I enjoy the company of my wonderful other half
+          and our little zoo of animals. Together we have 2 deaf Aussie Shepherds, 1
+          potato in cat's clothing, 1 Victorian child in cat cosplay, 1 demon
+          incarnate shaped like a drunk kitty, and 1 mafiosa of a chinchilla!
         </p>
       </div>
 
@@ -133,7 +149,7 @@
 
     <section class="my-work" id="work">
       <h2 class="section__title section__title--work">My Work</h2>
-      <p class="section__subtitle section__subtitle--work">my range of work</p>
+      <!-- <p class="section__subtitle section__subtitle--work">my range of work</p> -->
 
       <div class="portfolio">
         <!-- portfolio item 01 -->
