--- a/index.html
+++ b/index.html
@@ -33,16 +33,14 @@
 
   <body>
     <header>
-      <div class="topbar">
-        <div class="logo">
-          <!-- <img src="img/miku.jpg" alt="a pciture of hatsune miku" /> -->
-          <a href="index.html" class="logo__link">ikaros</a>
-        </div>
-
-        <button class="nav-toggle" aria-label="toggle navigation">
-          <span class="hamburger"></span>
-        </button>
+      <div class="logo">
+        <!-- <img src="img/miku.jpg" alt="a pciture of hatsune miku" /> -->
+        <p class="logo">ikaros</p>
       </div>
+
+      <button class="nav-toggle" aria-label="toggle navigation">
+        <span class="hamburger"></span>
+      </button>
       <nav class="nav__layer"></nav>
       <nav class="nav">
         <ul class="nav__list">
