--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -17,6 +17,11 @@
     <link
       href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
       rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Astloch:wght@400;700&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet" />
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -24,7 +29,8 @@
   <body>
     <header>
       <div class="logo">
-        <img src="img/miku.jpg" alt="a pciture of hatsune miku" />
+        <!-- <img src="img/miku.jpg" alt="a pciture of hatsune miku" /> -->
+        <p class="logo">ikaros</p>
       </div>
 
       <button class="nav-toggle" aria-label="toggle navigation">
